<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="5dp">

    <TextView
        style="@style/HeaderTitleText"
        android:text="@string/username_or_email" />

    <EditText
        android:id="@+id/username"
        style="@style/LoginEditText"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/HeaderTitleText"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        style="@style/LoginEditText"
        android:imeOptions="actionNext"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/next"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical" />

</LinearLayout>